apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "21"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"12"},"creationTimestamp":"2026-05-25T16:11:54Z","generation":12,"labels":{"app":"react-backend-app"},"name":"react-backend-app","namespace":"dev-1","resourceVersion":"346240","uid":"36d8ece8-6bd5-40b5-a737-f527f23e81a5"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"react-backend-app"}},"strategy":{"rollingUpdate":{"max [...]
  labels:
    app: react-backend-app
  name: react-backend-app
  namespace: dev-1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: react-backend-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-06-06T11:53:16Z"
      labels:
        app: react-backend-app
    spec:
      containers:
      - image: docker.io/barsukforever5/react-backend-image:v20
        imagePullPolicy: IfNotPresent
        name: react-backend-container
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-06-06T12:07:35Z"
    lastUpdateTime: "2026-06-06T12:07:35Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    type: Available
  - lastTransitionTime: "2026-05-25T16:11:54Z"
    lastUpdateTime: "2026-06-06T12:20:53Z"
    message: ReplicaSet "react-backend-app-688bfd4bc" has successfully progressed.
    reason: NewReplicaSetAvailable
    type: Progressing
  observedGeneration: 27
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
