apps/react-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"react-frontend-service","namespace":"dev-1"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"react-frontend-app"},"type":"ClusterIP"}}
  name: react-frontend-service
  namespace: dev-1
spec:
  clusterIP: 10.43.60.225
  clusterIPs:
  - 10.43.60.225
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: react-frontend-app
  sessionAffinity: None
  type: ClusterIP
  loadBalancer: {}
