apps/arangodb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arangodb-ingress
  namespace: arango
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - arangodb.barsukforever.dev
  rules:
  - host: arangodb.barsukforever.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: arangodb
            port:
              number: 8529
