apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"traefik.ingress.kubernetes.io/router.entrypoints":"web, websecure","traefik.ingress.kubernetes.io/router.tls":"true","traefik.ingress.kubernetes.io/router.tls.certresolver":"letsencrypt"},"name":"react-ingress","namespace":"dev-1"},"spec":{"ingressClassName":"traefik","rules":[{"host":"react.barsukforever.dev","http":{"paths":[{"backend":{"service":{"name":"react-backend-service","port":{"number":80}}},"path" [...]
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
  name: react-ingress
  namespace: dev-1
spec:
  ingressClassName: traefik
  rules:
  - host: react.barsukforever.dev
    http:
      paths:
      - backend:
          service:
            name: react-backend-service
            port:
              number: 80
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: react-frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
  loadBalancer:
    ingress:
    - ip: 146.103.121.31
